<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="main.menu.MenuActivity"
        android:background="@drawable/pixel_background">

    <TextView
            android:text="@string/app_name"
            android:fontFamily="@font/pixel_font"
            android:textStyle="bold"
            android:textColor="@color/purpleColor"
            android:layout_width="215dp"
            android:textSize="40sp"
            android:textAlignment="center"
            android:layout_height="50dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="72dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <ImageView
            android:layout_width="321dp"
            android:layout_height="138dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView4"/>


    <TextView
            android:text="@string/play"
            android:fontFamily="@font/pixel_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:translationZ="1px"
            app:layout_constraintBottom_toBottomOf="@+id/playBt"
            app:layout_constraintEnd_toEndOf="@+id/playBt"
            app:layout_constraintStart_toStartOf="@+id/playBt"
            app:layout_constraintTop_toTopOf="@+id/playBt"/>

    <ImageView
            android:layout_width="129dp"
            android:layout_height="64dp" app:srcCompat="@drawable/pixel_box"
            android:id="@+id/playBt" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo" app:layout_constraintEnd_toEndOf="@+id/logo"/>

    <TextView
            android:text="@string/exit"
            android:fontFamily="@font/pixel_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:translationZ="1px"
            app:layout_constraintBottom_toBottomOf="@+id/exitBt"
            app:layout_constraintEnd_toEndOf="@+id/exitBt"
            app:layout_constraintStart_toStartOf="@+id/exitBt"
            app:layout_constraintTop_toTopOf="@+id/exitBt"/>

    <ImageView
            android:layout_width="129dp"
            android:layout_height="64dp" app:srcCompat="@drawable/pixel_box"
            android:id="@+id/exitBt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/playBt" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.084"
            app:layout_constraintEnd_toEndOf="@+id/playBt" app:layout_constraintStart_toStartOf="@+id/playBt"/>

</androidx.constraintlayout.widget.ConstraintLayout>