<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/pixel_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="main.gameOver.GameOverActivity">

    <TextView
            android:text="@string/end_game"
            android:fontFamily="@font/pixel_font"
            android:textColor="#9E1808"
            android:layout_width="333dp"
            android:layout_height="52dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="72dp" app:layout_constraintTop_toTopOf="parent" android:textSize="30sp"
            android:textAlignment="center" android:textStyle="bold"/>

    <ImageView
            android:layout_width="122dp"
            android:layout_height="146dp" app:srcCompat="?attr/actionBarDivider"
            android:id="@+id/playersChoiceGameOverIv"
            app:layout_constraintEnd_toStartOf="@+id/computerChoiceGameOverIv"
            android:layout_marginEnd="52dp" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="122dp"
            android:layout_height="146dp" app:srcCompat="?attr/actionBarDivider"
            android:id="@+id/computerChoiceGameOverIv"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/playersChoiceGameOverIv"/>


    <TextView
            android:text="@string/your_points"
            android:fontFamily="@font/pixel_font"
            android:layout_width="301dp"
            android:layout_height="39dp"
            android:id="@+id/pointsTv"
            android:textAlignment="center" android:textSize="24sp"
            android:translationZ="1px"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/playersChoiceGameOverIv" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/computerChoiceGameOverIv"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"/>
    <ImageView
            android:layout_width="347dp"
            android:layout_height="128dp" app:srcCompat="@drawable/pixel_box"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/pointsTv"
            app:layout_constraintStart_toStartOf="@+id/pointsTv" app:layout_constraintHorizontal_bias="0.541"
            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/playersChoiceGameOverIv"/>


    <TextView
            android:text="@string/restart"
            android:fontFamily="@font/pixel_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="1px"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/restartEndGameBt"
            app:layout_constraintStart_toStartOf="@+id/restartEndGameBt"
            app:layout_constraintBottom_toBottomOf="@+id/restartEndGameBt"
            app:layout_constraintTop_toTopOf="@+id/restartEndGameBt"/>
    <ImageView
            android:layout_width="129dp"
            android:layout_height="64dp" app:srcCompat="@drawable/pixel_box"
            android:id="@+id/restartEndGameBt"
            app:layout_constraintEnd_toStartOf="@+id/exitEndGameBt"
            android:layout_marginEnd="8dp" android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.32"/>


    <TextView
            android:text="@string/exit"
            android:fontFamily="@font/pixel_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:translationZ="1px"
            app:layout_constraintBottom_toBottomOf="@+id/exitEndGameBt"
            app:layout_constraintEnd_toEndOf="@+id/exitEndGameBt"
            app:layout_constraintStart_toStartOf="@+id/exitEndGameBt"
            app:layout_constraintTop_toTopOf="@+id/exitEndGameBt"/>

    <ImageView
            android:layout_width="129dp"
            android:layout_height="64dp" app:srcCompat="@drawable/pixel_box"
            android:id="@+id/exitEndGameBt"
            app:layout_constraintTop_toTopOf="@+id/restartEndGameBt" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="@+id/imageView2" android:layout_marginEnd="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
